# dimension-223

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile
android/app/: build.gradle
android/app/src/androidTest/java/com/togglecorp/dimension223/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/togglecorp/dimension223/: MainActivity.java  PointCloud.java  StreamLoader.java  Utilities.java  VRActivity.java
android/app/src/main/res/layout/: activity_main.xml  activity_vr.xml
android/app/src/main/res/raw/: simple_fs.glsl  simple_vs.glsl
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/togglecorp/dimension223/: ExampleUnitTest.java
include/: Application.h  Project.h  maths.h  stdinc.h  utils.h
include/backend/: CloudStitcher.h  InputData.h  LensBlurImage.h  PointMatcher.h  PointsMatcher.h  Surface.h  maths.h
include/graphics/: Camera.h  DepthMaterial.h  DiffuseMaterial.h  InputHandler.h  Material.h  Mesh.h  Model.h  PointCloud.h  Program.h  Renderer.h  Shader.h  Texture.h  Transformation.h
include/image/: DepthMap.h  DisparityMap.h  Image.h  Texture.h  utils.h
include/mesh/: Mesh3D.h
include/physics/: Object.h  World.h
include/shaders/: DiffuseMaterial.h  Material.h  Program.h  Shader.h
include/ui/: CloudPairEditor.h  GlxWidget.h  ImageDrawingArea.h  ImageEditor.h  InputDialog.h  MainWindow.h  ProjectStreamer.h  Renderer.h  SFMLWidget.h  SelectionDrawingArea.h  SurfaceDrawingArea.h  SurfaceEditor.h  widget_creator.h
include/utils/: Exception.h  TextFile.h
models/: duck.dae
shaders/: fs_3d.glsl  fs_depth.glsl  fs_simple.glsl  vs_3d.glsl  vs_diffuse.glsl  vs_simple.glsl
src/: Application.cpp  main.cpp  utils.cpp
src/backend/: CloudStitcher.cpp  InputData.cpp  LensBlurImage.cpp  PointMatcher.cpp  PointsMatcher.cpp  base64.cpp  maths.cpp
src/graphics/: Camera.cpp  InputHandler.cpp  Mesh.cpp  Model.cpp  PointCloud.cpp  Program.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/image/: DepthMap.cpp  DisparityMap.cpp  Texture.cpp
src/mesh/: Mesh3D.cpp
src/shaders/: Program.cpp  Shader.cpp
src/ui/: GlxWidget.cpp  ImageDrawingArea.cpp  ImageEditor.cpp  InputDialog.cpp  MainWindow.cpp  ProjectStreamer.cpp  Renderer.cpp  SFMLWidget.cpp  SelectionDrawingArea.cpp  SurfaceDrawingArea.cpp
